--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -38,6 +39,7 @@
     "@types/jest": "29.2.4",
     "@types/multer": "^1.4.7",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
