--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
+    "dayjs": "^1.11.7",
     "fs": "^0.0.1-security",
     "handlebars": "^4.7.7",
     "nodemailer": "^6.9.1",
