--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
