--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,16 @@ jobs:
       - name: Build
         run: npm run build
         
+      - name: Cria Pasta 
+      - uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          port: ${{ secrets.SSH_PORT }}
+          source: ". , !node_modules"
+          target: "desafio-tuti-backend"
+   
       - uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -32,7 +42,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           source: ". , !node_modules"
           script:
-            cd /home/app/desafio-tuti-backend && docker-compose up -d mysql_sgr && npm run start:dev    
+            cd /home/app/desafio-tuti-backend/dist && npm run build && docker-compose up -d mysql_sgr && pm2 restart main.js    
           
           
           
