--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           source: ". , !node_modules"
           target: "desafio-tuti-backend"
    
-      - uses: appleboy/scp-action@master
+      - uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
@@ -42,7 +42,8 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{secrets.SSH_PASSPHRASE}}
           source: ". , !node_modules"
-          script: cd /home/app/desafio-tuti-backend && docker-compose up -d mysql_sgr && pm2 restart dist/main.js 
+          script: 
+            cd /home/app/desafio-tuti-backend && docker-compose up -d mysql_sgr && pm2 restart dist/main.js 
                
           
           
