--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+    environment:
+      name: dev
     steps:
       - uses: actions/checkout@v2
       
